rewrite clone/move method for better calibration, integration with team 3's code